dropzone input overflow issue

--- a/src/Assets/stylesheets/main.less
+++ b/src/Assets/stylesheets/main.less
@@ -997,6 +997,10 @@ flex: 0 0 25%;
 
         .dropzone{
             cursor: pointer;
+
+            input{
+                width: 100%;
+            }
         }
         a{color:#313787}
 
@@ -1414,3 +1418,12 @@ h4 {
     }
 
 } 
+
+// Dropzone Styles
+
+.dropzone{
+    cursor: pointer;
+    input{
+        width: 100%;
+    }
+}
